@@ -14,7 +14,6 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @Tag("mapper")
-@SuppressWarnings("FieldCanBeLocal")
 class EntityDtoMapperImplTest {
 
     @Nested
@@ -24,8 +23,10 @@ class EntityDtoMapperImplTest {
 
         private final EntityDtoMapper<Atm, AtmDto> mapper = new EntityDtoMapperImpl<>();
 
-        private final String ENTITY_CLASS_NAME = "com.bank.publicinfo.entity.Atm";
-        private final String DTO_CLASS_NAME = "com.bank.publicinfo.dto.AtmDto";
+        {
+            mapper.setEntityClassName(Atm.class.getCanonicalName());
+            mapper.setDtoClassName(AtmDto.class.getCanonicalName());
+        }
 
         private final Atm ENTITY = new Atm("address", false);
         private final AtmDto DTO = new AtmDto("address", false);
@@ -33,19 +34,19 @@ class EntityDtoMapperImplTest {
         @Test
         @DisplayName("Преобразование DTO в Entity")
         void testToEntity() {
-            genericTestToEntity(mapper, DTO, ENTITY_CLASS_NAME, ENTITY);
+            genericTestToEntity(mapper, DTO, ENTITY);
         }
 
         @Test
         @DisplayName("Преобразование Entity в DTO")
         void testToDto() {
-            genericTestToDto(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDto(mapper, ENTITY, DTO);
         }
 
         @Test
         @DisplayName("Преобразование списка Entity в список DTO")
         void testToDtoList() {
-            genericTestToDtoList(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDtoList(mapper, ENTITY, DTO);
         }
     }
 
@@ -56,8 +57,10 @@ class EntityDtoMapperImplTest {
 
         private final EntityDtoMapper<Audit, AuditDto> mapper = new EntityDtoMapperImpl<>();
 
-        private final String ENTITY_CLASS_NAME = "com.bank.publicinfo.entity.Audit";
-        private final String DTO_CLASS_NAME = "com.bank.publicinfo.dto.AuditDto";
+        {
+            mapper.setEntityClassName(Audit.class.getCanonicalName());
+            mapper.setDtoClassName(AuditDto.class.getCanonicalName());
+        }
 
         private final Audit ENTITY = new Audit(EntityType.ENTITY_TYPE_ONE, OperationType.OPERATION_TYPE_ONE, "createdBy",
                 Timestamp.valueOf(LocalDateTime.of(2020, 1, 1, 0, 0, 0, 0)), "entityJson");
@@ -68,19 +71,19 @@ class EntityDtoMapperImplTest {
         @Test
         @DisplayName("Преобразование DTO в Entity")
         void testToEntity() {
-            genericTestToEntity(mapper, DTO, ENTITY_CLASS_NAME, ENTITY);
+            genericTestToEntity(mapper, DTO, ENTITY);
         }
 
         @Test
         @DisplayName("Преобразование Entity в DTO")
         void testToDto() {
-            genericTestToDto(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDto(mapper, ENTITY, DTO);
         }
 
         @Test
         @DisplayName("Преобразование списка Entity в список DTO")
         void testToDtoList() {
-            genericTestToDtoList(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDtoList(mapper, ENTITY, DTO);
         }
     }
 
@@ -91,8 +94,10 @@ class EntityDtoMapperImplTest {
 
         private final EntityDtoMapper<BankDetails, BankDetailsDto> mapper = new EntityDtoMapperImpl<>();
 
-        private final String ENTITY_CLASS_NAME = "com.bank.publicinfo.entity.BankDetails";
-        private final String DTO_CLASS_NAME = "com.bank.publicinfo.dto.BankDetailsDto";
+        {
+            mapper.setEntityClassName(BankDetails.class.getCanonicalName());
+            mapper.setDtoClassName(BankDetailsDto.class.getCanonicalName());
+        }
 
         private final BankDetails ENTITY = new BankDetails(1L, 0L, 0L, 0L, "city", "jointStockCompany", "name");
         private final BankDetailsDto DTO = new BankDetailsDto(1L, 0L, 0L, 0L, "city", "jointStockCompany", "name");
@@ -101,19 +106,19 @@ class EntityDtoMapperImplTest {
         @Test
         @DisplayName("Преобразование DTO в Entity")
         void testToEntity() {
-            genericTestToEntity(mapper, DTO, ENTITY_CLASS_NAME, ENTITY);
+            genericTestToEntity(mapper, DTO, ENTITY);
         }
 
         @Test
         @DisplayName("Преобразование Entity в DTO")
         void testToDto() {
-            genericTestToDto(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDto(mapper, ENTITY, DTO);
         }
 
         @Test
         @DisplayName("Преобразование списка Entity в список DTO")
         void testToDtoList() {
-            genericTestToDtoList(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDtoList(mapper, ENTITY, DTO);
         }
     }
 
@@ -124,8 +129,10 @@ class EntityDtoMapperImplTest {
 
         private final EntityDtoMapper<Branch, BranchDto> mapper = new EntityDtoMapperImpl<>();
 
-        private final String ENTITY_CLASS_NAME = "com.bank.publicinfo.entity.Branch";
-        private final String DTO_CLASS_NAME = "com.bank.publicinfo.dto.BranchDto";
+        {
+            mapper.setEntityClassName(Branch.class.getCanonicalName());
+            mapper.setDtoClassName(BranchDto.class.getCanonicalName());
+        }
 
         private final Branch ENTITY = new Branch("address", 0L, "city", Time.valueOf(LocalTime.of(12, 0, 0)),
                 Time.valueOf(LocalTime.of(12, 0, 0)));
@@ -134,21 +141,20 @@ class EntityDtoMapperImplTest {
 
         @Test
         @DisplayName("Преобразование DTO в Entity")
-
         void testToEntity() {
-            genericTestToEntity(mapper, DTO, ENTITY_CLASS_NAME, ENTITY);
+            genericTestToEntity(mapper, DTO, ENTITY);
         }
 
         @Test
         @DisplayName("Преобразование Entity в DTO")
         void testToDto() {
-            genericTestToDto(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDto(mapper, ENTITY, DTO);
         }
 
         @Test
         @DisplayName("Преобразование списка Entity в список DTO")
         void testToDtoList() {
-            genericTestToDtoList(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDtoList(mapper, ENTITY, DTO);
         }
     }
 
@@ -159,8 +165,10 @@ class EntityDtoMapperImplTest {
 
         private final EntityDtoMapper<Certificate, CertificateDto> mapper = new EntityDtoMapperImpl<>();
 
-        private final String ENTITY_CLASS_NAME = "com.bank.publicinfo.entity.Certificate";
-        private final String DTO_CLASS_NAME = "com.bank.publicinfo.dto.CertificateDto";
+        {
+            mapper.setEntityClassName(Certificate.class.getCanonicalName());
+            mapper.setDtoClassName(CertificateDto.class.getCanonicalName());
+        }
 
         private final BankDetails BANK_DETAILS = new BankDetails(0L, 0L, 0L, 0L, "city", "jointStockCompany", "name");
 
@@ -170,19 +178,19 @@ class EntityDtoMapperImplTest {
         @Test
         @DisplayName("Преобразование DTO в Entity")
         void testToEntity() {
-            genericTestToEntity(mapper, DTO, ENTITY_CLASS_NAME, ENTITY);
+            genericTestToEntity(mapper, DTO, ENTITY);
         }
 
         @Test
         @DisplayName("Преобразование Entity в DTO")
         void testToDto() {
-            genericTestToDto(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDto(mapper, ENTITY, DTO);
         }
 
         @Test
         @DisplayName("Преобразование списка Entity в список DTO")
         void testToDtoList() {
-            genericTestToDtoList(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDtoList(mapper, ENTITY, DTO);
         }
     }
 
@@ -193,8 +201,10 @@ class EntityDtoMapperImplTest {
 
         private final EntityDtoMapper<License, LicenseDto> mapper = new EntityDtoMapperImpl<>();
 
-        private final String ENTITY_CLASS_NAME = "com.bank.publicinfo.entity.License";
-        private final String DTO_CLASS_NAME = "com.bank.publicinfo.dto.LicenseDto";
+        {
+            mapper.setEntityClassName(License.class.getCanonicalName());
+            mapper.setDtoClassName(LicenseDto.class.getCanonicalName());
+        }
 
         private final BankDetails BANK_DETAILS = new BankDetails(0L, 0L, 0L, 0L, "city", "jointStockCompany", "name");
 
@@ -204,34 +214,32 @@ class EntityDtoMapperImplTest {
         @Test
         @DisplayName("Преобразование DTO в Entity")
         void testToEntity() {
-            genericTestToEntity(mapper, DTO, ENTITY_CLASS_NAME, ENTITY);
+            genericTestToEntity(mapper, DTO, ENTITY);
         }
 
         @Test
         @DisplayName("Преобразование Entity в DTO")
         void testToDto() {
-            genericTestToDto(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDto(mapper, ENTITY, DTO);
         }
 
         @Test
         @DisplayName("Преобразование списка Entity в список DTO")
         void testToDtoList() {
-            genericTestToDtoList(mapper, ENTITY, DTO_CLASS_NAME, DTO);
+            genericTestToDtoList(mapper, ENTITY, DTO);
         }
     }
 
-    <E, D> void genericTestToEntity(EntityDtoMapper<E, D> mapper, D dto, String entityClassName, E entity) {
-        assertThat(mapper.toEntity(dto, entityClassName)).isEqualTo(entity);
+    <E, D> void genericTestToEntity(EntityDtoMapper<E, D> mapper, D dto, E entity) {
+        assertThat(mapper.toEntity(dto)).isEqualTo(entity);
     }
 
-    <E, D> void genericTestToDto(EntityDtoMapper<E, D> mapper, E entity, String dtoClassName, D dto) {
-        assertThat(mapper.toDto(entity, dtoClassName)).isEqualTo(dto);
+    <E, D> void genericTestToDto(EntityDtoMapper<E, D> mapper, E entity, D dto) {
+        assertThat(mapper.toDto(entity)).isEqualTo(dto);
     }
 
-    <E, D> void genericTestToDtoList(EntityDtoMapper<E, D> mapper, E entity, String dtoClassName, D dto) {
-        assertThat(mapper.toDtoList(List.of(entity), dtoClassName))
-                .isEqualTo(List.of(dto));
-        assertThat(mapper.toDtoList(Collections.emptyList(), dtoClassName))
-                .isEqualTo(Collections.emptyList());
+    <E, D> void genericTestToDtoList(EntityDtoMapper<E, D> mapper, E entity, D dto) {
+        assertThat(mapper.toDtoList(List.of(entity))).isEqualTo(List.of(dto));
+        assertThat(mapper.toDtoList(Collections.emptyList())).isEqualTo(Collections.emptyList());
     }
 }
